# cosmetics_parser

./: Cargo.toml  Readme.md
src/: Makefile  grammar.pest  input.txt  lib.rs  main.rs  output.json
tests/: grammar_tests.rs
